Russian version corrections

--- a/locales/en/about.json
+++ b/locales/en/about.json
@@ -34,7 +34,8 @@
   },
   "caspianWeek": {
     "title": "Organizer",
-    "button": "Go to official site Caspian Week",
+    "more": "more",
+    "button": "Go to site Caspian Week",
     "2021": "CASPIAN WEEK IS THE STRATEGIC PARTNER OF THE ANNUAL HORASIS: THE GLOBAL VISIONS COMMUNITY. On June 8, HORASIS held its annual global meeting, co-chaired by the Chairman of the Caspian Week Forum, Murat Seitnepesov.",
     "2020": "THE 2020 EDITION WILL BREAK NEW GROUND IN COVERING A BROAD ARRAY OF TOPICS INCLUDING INNOVATION IN MANUFACTURING, TRANSPORTATION AND FINANCE, CYBER SECURITY AND AI, AND FIGHTING ILLICIT TRADE AS WELL AS NEW DEVELOPMENTS IN HEALTHCARE, FINANCIAL INCLUSION AND EDUCATION."
   },
