--- a/locales/en/calculator.json
+++ b/locales/en/calculator.json
@@ -10,7 +10,7 @@
     "contact information": "Contact information",
     "name": "Name",
     "email": "Email",
-    "metrix tons": "Metric tons",
+    "metric tons": "Metric tons",
     "type product grade": "Type grade of product",
     "search place of delivery": "Search on the map",
     "additional text": "Company name, order requirements",
