--- a/locales/ru/about.json
+++ b/locales/ru/about.json
@@ -34,7 +34,8 @@
   },
   "caspianWeek": {
     "title": "Организаторы",
-    "button": "Перейти на оффициальный сайт Caspian Week",
+    "button": "Перейти на сайт Caspian Week",
+    "more": "подробнее",
     "2021": "8 июня 2021 года HORASIS: the Global Visions Community провёл свою ежегодную глобальную встречу, сопредседателем которой стал Председатель форума «Caspian Week» Мурат Сеитнепесов.",
     "2020": "Издание 2020 г. откроет новые возможности для охвата широкого спектра тем, включая инновации в производстве, транспорте и финансах, кибербезопасности и искусственном интеллекте, а также в борьбе с незаконной торговлей."
   },
