--- a/locales/ru/calculator.json
+++ b/locales/ru/calculator.json
@@ -10,11 +10,11 @@
     "contact information": "Контактная информация",
     "name": "Имя",
     "email": "Email",
-    "metrix tons": "Тонн",
+    "metric tons": "Тонн",
     "type product grade": "Введите марку товара",
     "search place of delivery": "Введите место доставки",
     "additional text": "Название компании, требования к заказу",
-    "name example": "Николай Иванов",
+    "name example": "Иван",
     "email example": "example@gmail.com",
     "communication method": "Удобный способ коммуникации:",
     "we will revert": "Мы вернемся с предложением в течение 48 часов",
