--- a/locales/ru/common.json
+++ b/locales/ru/common.json
@@ -160,6 +160,7 @@
   },
   "menu": {
     "home": "Главная",
+    "pages": "Страницы",
     "about us": "О нас",
     "order process": "Процесс заказа",
     "services": "Услуги",
@@ -170,7 +171,7 @@
     "hdpe": "ПНД",
     "pp": "ПП",
     "ldpe": "ПВД",
-    "pages": "Страницы"
+    "black compound": "ПК"
   },
   "latestOffersTitle": "Последние предложения",
   "noLatestOffers": "Последних заказов пока нет!",
@@ -201,7 +202,8 @@
     "terms": "Условия использования",
     "privacy": "Политика конфеденциальности"
   },
-  "noProducts": "Указаных товаров в каталоге нет!",
+  "noProducts": "Указаных товаров в каталоге нет",
+  "noAnalogs": "У этого товара нет аналогов",
   "showMore": "Показать еще...",
   "showLess": "Скрыть",
   "filtersBtn": "Фильтры",
