Polymer grade info translation fix

--- a/locales/en/product.json
+++ b/locales/en/product.json
@@ -48,7 +48,8 @@
     "Т 60-475-119": "• High rigidity• Glossy surface aspects • Good impact strength • Meets FDA requirements of 21CFR 177.1520",
     "T 50-500": "• Good rigidity • High impact strength • Meets FDA requirements of 21CFR 177.1520",
     "A4009MFN1325": "• High tenacity monofilaments & tapes • Very low gels content• Superior processability & surface quality • Very low MVTR (Moisture Vapour Transmission Rate)",
-    "Inpipe 100": "• Outstandin envirmantal stress crack resistance • High stiffenss• High impact strength (Rapid crack propagation) • Good processability"
+    "Inpipe 100": "• Outstandin envirmantal stress crack resistance • High stiffenss• High impact strength (Rapid crack propagation) • Good processability",
+    "HM0359 PE": "• Smooth surface, good resistance to environmental cracking, anti-static"
   },
   "packaging": {
     "Bags of 25 kg on pallets; thermoresistant paper.": "Bags of 25 kg on pallets; thermoresistant paper.",
