--- a/locales/ru/product.json
+++ b/locales/ru/product.json
@@ -48,7 +48,8 @@
     "Т 60-475-119": "• Высокая жесткость • Глянцевая поверхность • Хорошая ударная вязкость • Отвечает требованиям FDA 21CFR 177.1520",
     "T 50-500": "• Хорошая жесткость • Высокая ударная вязкость • Отвечает требованиям FDA 21CFR 177.1520",
     "A4009MFN1325": "• Высокопрочные моноволокна и ленты • Очень низкое содержание гелей • Превосходная обрабатываемость и качество поверхности • Очень низкая MVTR (скорость передачи паров влаги)",
-    "Inpipe 100": "• Превосходная стойкость к растрескиванию под воздействием окружающей среды • Высокая жесткость • Высокая ударная вязкость (быстрое распространение трещин) • Хорошая технологичность"
+    "Inpipe 100": "• Превосходная стойкость к растрескиванию под воздействием окружающей среды • Высокая жесткость • Высокая ударная вязкость (быстрое распространение трещин) • Хорошая технологичность",
+    "HM0359 PE": "• Гладкая поверхность, хорошая устойчивость к растрескиванию окружающей среды, антистатичность"
   },
   "packaging": {
     "Bags of 25 kg on pallets; thermoresistant paper.": "Мешки по 25 кг на поддонах; термостойкие бумаги.",
