--- a/locales/ru/order.json
+++ b/locales/ru/order.json
@@ -38,7 +38,7 @@
     "for private individuals": "Для частных лиц",
     "counterparty details": "Реквизиты контрагента",
     "registered name": "Полное зарегистрированное имя",
-    "registrtion no": "Регистрационный номер",
+    "registration no": "Регистрационный номер",
     "country of incorporation": "Страна регистрации",
     "date of birth": "Дата и место рождения",
     "residential address": "Адрес проживания",
