--- a/locales/ru/common.json
+++ b/locales/ru/common.json
@@ -11,16 +11,16 @@
     "processing method": "Категория применения",
     "application": "Область применения",
     "appearance": "Внешний вид",
-    "origin": "Источник",
+    "origin": "Происхождение",
     "vst": "Температура вика",
     "color": "Цвет",
     "price from": "Цена: от",
     "static strenght": "Статическая сила",
-    "mass fraction of nitrogen": "Массовая доля азота",
-    "mass fraction of biuret": "Массовая доля биурета",
+    "mass fraction of nitrogen": "Массовая доля азота, минимум (%)",
+    "mass fraction of biuret": "Массовая доля биурета, максимум (%)",
     "mass fractions of water ": "Массовая доля воды",
     "mass fraction of potassium in terms of k2o,%, not less": "Массовая доля калия в пересчете на K2O, не менее (%)",
-    "mass fractions of assimilable": "Остальные массовые доли",
+    "mass fractions of assimilable": "Остальные массовые доли (%)",
     "ph of an aqueous solution with mass share of 10%, not less": "pH водного раствора с массовой долей 10%, не менее",
     "mass fraction of potassium in terms of k2o in dry matter, %": "Массовая доля калия в пересчете на K2O в сухом веществе (%)",
     "mass fraction of nitrogen in terms of dry matter, %, not less": "Массовая доля азота в пересчете на сухое вещество, не менее (%)",
@@ -75,6 +75,29 @@
       "pp": "ПП",
       "ldpe": "ПВД",
       "black compound": "ПК"
+    },
+    "producer": {
+      "pjsc «kazanorgsintez»": "ПАО «Казаньоргсинтез»",
+      "nizhnekamskneftekhim": "Нижнекамскнефтехим",
+      "stavrolen": "Ставролен",
+      "turkmengaz": "ТуркменГаз",
+      "state concern \"turkmengaz\"": "Государственный концерн «ТуркменГаз»",
+      "turkmenistan": "Туркменистан",
+      "kazan pc": "Казаньоргсинтез",
+      "uz-cor-gas": "Уз-Кор-Газ",
+      "uz-cor-gas chemical": "Устюртский газохимический комплекс",
+      "uz-kor gas chemical": "Устюртский газохимический комплекс",
+      "uzbekistan": "Узбекистан",
+      "tknpz": "Туркменбашинский комплекс",
+      "shurtan gkm": "Шуртан ГХК",
+      "shurtan gas chemical complex": "Шуртан ГХК",
+      "navoiyazot": "Навоиазот",
+      "jsc navoiyazot": "Навоиазот",
+      "mubarek plant": "Мубарекский газоперерабатывающий завод",
+      "mubarek gas processing plant": "Мубарекский газоперерабатывающий завод",
+      "gazprom neftekhim salavat": "Газпром нефтехим Салават",
+      "zapsibneftekhim (sibur)": "ЗапСибНефтехим",
+      "ufaorgsintez": "Уфаоргсинтез"
     },
     "processing method": {
       "blow moulding": "Выдувное формование",
@@ -211,5 +234,6 @@
   "clearBtn": "Очистить фильтры",
   "productsText1": "товар",
   "productsText2": "товарa",
-  "productsText3": "товаров"
+  "productsText3": "товаров",
+  "null": "null"
 }
