Latest offers translate

--- a/locales/ru/about.json
+++ b/locales/ru/about.json
@@ -40,7 +40,7 @@
     "2020": "Издание 2020 г. откроет новые возможности для охвата широкого спектра тем, включая инновации в производстве, транспорте и финансах, кибербезопасности и искусственном интеллекте, а также в борьбе с незаконной торговлей."
   },
   "offices": {
-    "title": "Оффисы",
+    "title": "Представительства",
     "lugano": "Лугано<0></0>Швейцария",
     "dubai": "Дубай<0></0>ОАЭ",
     "ashgabat": "Ашхабад<0></0>Туркменистан",
