One translation fix

--- a/locales/ru/product.json
+++ b/locales/ru/product.json
@@ -7,7 +7,7 @@
     "availability": "Доступность",
     "documents": "Документы",
     "photos": "Фотографии",
-    "application": "Приложение",
+    "application": "Применение",
     "samples": "Образцы",
     "faq": "FAQ"
   },
@@ -32,33 +32,5 @@
     "description": "Описание",
     "properties": "Характеристики",
     "packaging": "Упаковка"
-  },
-  "description": {
-    "Т 60-475-119": "T60-475-119 - полиэтилен высокой плотности с узким молекулярно-массовым распределением массы. Детали из этого материала имеют законченную полированную поверхность, а также обладают хорошей ударной вязкостью и жесткостью.",
-    "Inpipe 100": "INPIPE 100 - это высокопрочный полиэтиленовый полимер естественного цвета для экструзии труб. INPIPE 100 классифицируется как PE 100 согласно ISO 12162 на основании анализа ISO 9080. Составные PE 100 обычно используются для транспортировки воды и газа, как описано в ISO 4427 и 4437, соответственно.",
-    "T 50-500": "T50-500 - полиэтилен высокой плотности с узким молекулярно-массовым распределением. Он предназначен для литья под давлением, где необходим технический баланс и характеристики со стороны конечного пользователя.",
-    "A4009MFN1325": "A4009MFN1325 - гомополимер полиэтилена высокой плотности с узким молекулярно-массовым распределением, хорошо подходящий для множества применений, таких как канаты и удлиненная пряжа.",
-    "TPP D 30S": "Температура допустимой деформации при 0,46 МПа, не менее 110 °С. Температура размягчения по Вику (10Н), не менее 145 °С",
-    "BL6200": "BL 6200 - хрустящие гранулы преимущественно белого цвета. Они отличаются высокой степенью жесткости и текучести. Для их изготовления используется метод суспензионной полимеризации CSTR. Этот материал отлично подходит для выдувного формования.",
-    "15813-020": "Марка 15813-020 предназначена для изготовления изделий, допускающих контакт с пищевыми продуктами, для изготовления игрушек. Предназначен для изготовления медицинских принадлежностей, узлов и деталей медицинского оборудования, приборов и инструментов, допущенных к контакту с тканями тела, в том числе для внутреннего протезирования.",
-    "Urea grade “B”": "Карбамид негорюч, пожаро- и взрывобезопасен при нормальных условиях. По влиянию на организм относится к 3 классу опасных веществ.",
-    "Potassium chloride": "Транспортировка возможна всеми видами транспорта в соответствии с \"Правилами перевозки грузов\", действующими на данном виде транспорта.",
-    "Ammophos": "Транспортировка возможна всеми видами транспорта в соответствии с \"Правилами перевозки грузов\", действующими на данном виде транспорта."
-  },
-  "properties": {
-    "Т 60-475-119": "• Высокая жесткость • Глянцевая поверхность • Хорошая ударная вязкость • Отвечает требованиям FDA 21CFR 177.1520",
-    "T 50-500": "• Хорошая жесткость • Высокая ударная вязкость • Отвечает требованиям FDA 21CFR 177.1520",
-    "A4009MFN1325": "• Высокопрочные моноволокна и ленты • Очень низкое содержание гелей • Превосходная обрабатываемость и качество поверхности • Очень низкая MVTR (скорость передачи паров влаги)",
-    "Inpipe 100": "• Превосходная стойкость к растрескиванию под воздействием окружающей среды • Высокая жесткость • Высокая ударная вязкость (быстрое распространение трещин) • Хорошая технологичность",
-    "HM0359 PE": "• Гладкая поверхность, хорошая устойчивость к растрескиванию окружающей среды, антистатичность"
-  },
-  "packaging": {
-    "Bags of 25 kg on pallets; thermoresistant paper.": "Мешки по 25 кг на поддонах; термостойкие бумаги.",
-    "Product is packed in polyethylene bags (one bag net weight 2500±025kg) and stacked on flat pallets with shrink film": "Продукция упаковывается в полиэтиленовые мешки (вес одного мешка нетто 25,00 ± 0,25 кг) и укладывается на плоские поддоны с термоусадочной пленкой.",
-    "Product is packed in polyethylene bags (one bag net weight 25.00±0.25kg) and stacked on flat pallets with shrink film Maximum gross weight of a bundle is 2 tons": "родукция упаковывается в полиэтиленовые мешки (вес одного мешка нетто 25,00 ± 0,25 кг) и укладывается на плоские поддоны с термоусадочной пленкой. Максимальный общий вес пачки 2 тонны.",
-    "Carbamide is packed in paper bitumized of laminated bags, polyethylene bags, woven polymeric laminated bags woven polymeric bags with inserts, and also in soft specialized containers as MKR-1, OS": "Карбамид упаковывается в бумагу битумированную из ламинированных мешков, полиэтиленовых мешков, тканых полимерных ламинированных мешков, тканых полимерных мешков с вкладышами, а также в мягкую специализированную тару типа МКР-1, ОС.",
-    "The goods are stored in closed warehouses that protect the product from atmospheric precipitation The product is stored separately from other products, substances and materialsThe goods are stored in closed warehouses that protect the product from atmospheric precipitation The product is stored separately from other products, substances and materials": "Поставляется оптом, в мешках, контейнерах (FIBC). Товар хранится на закрытых складах, защищающих товар. от атмосферных осадков. Продукт хранится отдельно от других продуктов, веществ и материалов.",
-    "Shipped in bulk, in bags, containers (FIBC) The goods are stored in closed warehouses that protect the product from atmospheric precipitation The product is stored separately from other products, substances and materials": "Поставляется оптом, в мешках, контейнерах (FIBC). Товар хранится на закрытых складах, защищающих товар. от атмосферных осадков. Продукт хранится отдельно от других продуктов, веществ и материалов.",
-    "Bulk or bags": "Перевозится в мешках"
   }
 }
