Order process text & translation corrections

--- a/locales/ru/order.json
+++ b/locales/ru/order.json
@@ -7,7 +7,8 @@
     "track order": "Отслеживание заказа"
   },
   "step1": {
-    "main text": "После оформления заказа Вы получите отчет о сделке, аналогичный приведенному ниже, и сможете изменить или подтвердить его. Для подтверждения сделки необходимо пройти KYC. ",
+    "main text 1": "Здесь вы можете узнать о процессе заказа и отправить информацию прямо сейчас, чтобы избежать задержек с заказом, когда вы будете готовы его разместить.",
+    "main text 2": "После размещения заказа вы получите резюме сделки, аналогичное приведенному ниже, и сможете изменить или подтвердить его.",
     "grade title": "Марка: B-Y250",
     "order value": "Общая стоимость заказа",
     "price per m/t": "Цена за одну тонну",
@@ -25,9 +26,8 @@
     "submit button": "Подтвердить сделку"
   },
   "step2": {
-    "main text 1": "Здесь Вы можете узнать о процессе заказа и отправить информацию прямо сейчас, чтобы избежать задержек с заказом, когда Вы будете готовы его разместить. Например, мы рекомендуем вам как можно скорее отправить нам KYC и банковскую информацию (на случай, если вы предпочитаете платить по аккредитиву), чтобы мы провели необходимые проверки заранее.",
-    "main text 2": "Загрузить Общие положения и условия",
-    "submit button": "Подтвердить сделку"
+    "main text": "Здесь вы можете увидеть пример контракта, который будет сгенерирован после подтверждения итоговой сделки. Подтверждение сделки требует удовлетворительного KYC, поэтому мы рекомендуем вам как можно скорее отправить нам KYC и банковскую информацию (на случай, если вы предпочитаете платить аккредитивом), чтобы мы провели необходимые проверки заранее.",
+    "submit button": "Подтвердить условия использования"
   },
   "step3": {
     "main text": "Мы рекомендуем вам предоставить информацию о KYC сейчас, чтобы вы могли торговать с нами, когда будете готовы разместить заказ.",
