--- a/locales/ru/product.json
+++ b/locales/ru/product.json
@@ -7,7 +7,7 @@
     "availability": "Доступность",
     "documents": "Документы",
     "photos": "Фотографии",
-    "application": "Приложение",
+    "application": "Применение",
     "samples": "Образцы",
     "faq": "FAQ"
   },
