--- a/locales/en/order.json
+++ b/locales/en/order.json
@@ -7,7 +7,8 @@
     "track order": "Track order"
   },
   "step1": {
-    "main text": "Upon placing the rrder, You will receive the deal recap similar to the below one and will be able to change or to confirm it. The deal confirmation is subject to satisfactory KYC.",
+    "main text 1": "Here you can learn about the Order Process and submit information now, to avoid delays with the order when you are ready to place it.",
+    "main text 2": "Upon placing the order, You will receive the deal recap similar to the below one and will be able to change or to confirm it.",
     "grade title": "Grade: B-Y250",
     "order value": "Order value",
     "price per m/t": "Price per M/T",
@@ -25,11 +26,11 @@
     "submit button": "Confirm deal"
   },
   "step2": {
-    "main text 1": "Here you can learn about the Order Process and submit information now, to avoid delays with the order when you are ready to place it. For example, we recommend you to send us KYC and bank information (in case you prefer to pay by the letter of credit) as soon as you can so we perform the required checks in advance.",
-    "main text 2": "Download General Terms & Conditions",
-    "submit button": "Confirm deal"
+    "main text": "Here you can see an example of a contract that will be generated after deal recap confirmation. The deal confirmation is subject to satisfactory KYC, so We recommend you to send us KYC and bank information (in case you prefer to pay by the letter of credit) as soon as you can so we perform the required checks in advance.",
+    "submit button": "Confirm terms"
   },
   "step3": {
+    "main text 2": "Download General Terms & Conditions",
     "main text": "We recommend you to provide KYC information now, to enable you to trade with us once you are ready to place an order.",
     "main title": "Counterparty form",
     "info 1": "The information requested in this questionnaire is required to enable our company to trade with you.",
