[IC-2] Russian price in card

--- a/locales/en/common.json
+++ b/locales/en/common.json
@@ -188,6 +188,8 @@
     "terms": "Terms",
     "privacy": "Privacy"
   },
+  "currencySign": "$",
+  "onRequest": "on request",
   "noProducts": "There is no products",
   "noAnalogs": "There is no analogs",
   "showMore": "Show more...",
