--- a/locales/ru/common.json
+++ b/locales/ru/common.json
@@ -225,6 +225,8 @@
     "terms": "Условия использования",
     "privacy": "Политика конфиденциальности"
   },
+  "currencySign": "₽",
+  "onRequest": "по требованию",
   "noProducts": "Указаных товаров в каталоге нет",
   "noAnalogs": "У этого товара нет аналогов",
   "showMore": "Показать еще...",
