[IC-3, IC-9] Application image / Order step-2 title translation

--- a/locales/en/product.json
+++ b/locales/en/product.json
@@ -11,6 +11,7 @@
     "samples": "Samples",
     "faq": "FAQ"
   },
+  "noDocuments": "There is no available documents",
   "emptyForNow": "Empty for now",
   "samples": {
     "info": "You can order a product sample for testing on your equipment. <0>We ship 1.0 kg for free.</0> If you need a large batch of goods, we are ready to offer favorableconditions",
