--- a/locales/ru/order.json
+++ b/locales/ru/order.json
@@ -1,7 +1,7 @@
 {
   "tabs": {
     "confirm deal": "Подтверждение сделки",
-    "confirm general terms": "Подтверждение условий использования",
+    "confirm general terms": "Подтверждение условий контракта",
     "provide kyc": "KYC",
     "make a payment": "Оплата",
     "track order": "Отслеживание заказа"
@@ -27,7 +27,7 @@
   },
   "step2": {
     "main text": "Здесь вы можете увидеть пример контракта, который будет сгенерирован после подтверждения итоговой сделки. Подтверждение сделки требует удовлетворительного KYC, поэтому мы рекомендуем вам как можно скорее отправить нам KYC и банковскую информацию (на случай, если вы предпочитаете платить аккредитивом), чтобы мы провели необходимые проверки заранее.",
-    "submit button": "Подтвердить условия использования"
+    "submit button": "Подтвердить условия контракта"
   },
   "step3": {
     "main text": "Мы рекомендуем вам предоставить информацию о KYC сейчас, чтобы вы могли торговать с нами, когда будете готовы разместить заказ.",
