--- a/locales/ru/product.json
+++ b/locales/ru/product.json
@@ -11,6 +11,7 @@
     "samples": "Образцы",
     "faq": "FAQ"
   },
+  "noDocuments": "Нет доступных документов",
   "emptyForNow": "Пока пусто",
   "samples": {
     "info": "Вы можете заказать образец продукции для тестирования на своем оборудовании. <0>Мы отправляем 1,0 кг бесплатно.</0> Если вам нужна крупная партия товара, мы готовы предложить выгодные условия.",
