[IC-5, IC-12] Search clear button / Homepage russin title line break fix

--- a/locales/ru/common.json
+++ b/locales/ru/common.json
@@ -1,5 +1,5 @@
 {
-  "slogan": "Экономьте время и получайте<0></0>скидки, заказывая сырьевые<0></0>продукты онлайн",
+  "slogan": "Экономьте время и получайте скидки, заказывая сырьевые продукты онлайн",
   "productFields": {
     "type": "Тип",
     "grade": "Марка",
