[IC-2] Card prices corrections

--- a/locales/en/common.json
+++ b/locales/en/common.json
@@ -15,7 +15,8 @@
     "origin": "Origin",
     "vst": "VST",
     "color": "Color",
-    "price from": "Price: from",
+    "price": "Price:",
+    "from": "from",
     "static strenght": "Static strenght",
     "mass fraction of nitrogen": "Mass fraction of nitrogen, min (%)",
     "mass fraction of biuret": "Mass fraction of biuret, max (%)",
