--- a/locales/ru/common.json
+++ b/locales/ru/common.json
@@ -14,7 +14,8 @@
     "origin": "Происхождение",
     "vst": "Температура вика",
     "color": "Цвет",
-    "price from": "Цена: от",
+    "price": "Цена:",
+    "from": "от",
     "static strenght": "Статическая сила",
     "mass fraction of nitrogen": "Массовая доля азота, минимум (%)",
     "mass fraction of biuret": "Массовая доля биурета, максимум (%)",
@@ -226,7 +227,7 @@
     "privacy": "Политика конфиденциальности"
   },
   "currencySign": "₽",
-  "onRequest": "по требованию",
+  "onRequest": "по запросу",
   "noProducts": "Указаных товаров в каталоге нет",
   "noAnalogs": "У этого товара нет аналогов",
   "showMore": "Показать еще...",
