[IC-3, IC-8] Products search update / Apllication imgs fix

--- a/locales/en/order.json
+++ b/locales/en/order.json
@@ -4,7 +4,8 @@
     "confirm general terms": "Confirm general Terms & Conditions",
     "provide kyc": "Provide KYC",
     "make a payment": "Make a payment",
-    "track order": "Track order"
+    "track order": "Track order",
+    "step": "Step"
   },
   "step1": {
     "main text 1": "Here you can learn about the Order Process and submit information now, to avoid delays with the order when you are ready to place it.",
