--- a/locales/ru/order.json
+++ b/locales/ru/order.json
@@ -4,7 +4,8 @@
     "confirm general terms": "Подтверждение условий контракта",
     "provide kyc": "KYC",
     "make a payment": "Оплата",
-    "track order": "Отслеживание заказа"
+    "track order": "Отслеживание заказа",
+    "step": "Шаг"
   },
   "step1": {
     "main text 1": "Здесь вы можете узнать о процессе заказа и отправить информацию прямо сейчас, чтобы избежать задержек с заказом, когда вы будете готовы его разместить.",
